--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,31 @@
+appdirs==1.4.4
+audioread==2.1.8
+aupyom @ git+https://github.com/pierre-rouanet/aupyom@46bf6a90a0c00f44d65ebbce39e1a53d9534c3b9
 autopep8==1.5.4
+certifi==2020.6.20
 cffi==1.14.2
+chardet==3.0.4
+decorator==4.4.2
+future==0.18.2
+idna==2.10
+joblib==0.16.0
+librosa==0.8.0
+llvmlite==0.34.0
+numba==0.51.0
 numpy==1.19.1
+packaging==20.4
+pooch==1.1.1
 pycodestyle==2.6.0
 pycparser==2.20
+pygame==1.9.6
+pyparsing==2.4.7
+requests==2.24.0
+resampy==0.2.2
+scikit-learn==0.23.2
+scipy==1.5.2
+six==1.15.0
 sounddevice==0.4.0
+SoundFile==0.10.3.post1
+threadpoolctl==2.1.0
 toml==0.10.1
+urllib3==1.25.10
